<resources>
    <string name="app_name">AbsenIn</string>
    <string name="absen_text">Absen</string>
    <string name="see_history_text">Lihat History</string>
    <string name="exit_text">Exit</string>
    <string name="show_location_text">Klik untuk menampilkan lokasi</string>
    <string name="permission_denied_text">Program mungkin tidak berjalan dengan benar jika beberapa fungsi tidak diijinkan</string>
    <string name="invalid_qr_code_text">Code QR tidak valid, mohon lakukan scan ulang</string>
    <string name="invalid_location_text">Lokasi anda berbeda dengan lokasi event, mohon pastikan lokasi anda sama dengan lokasi event</string>
    <string name="invalid_code_title_text">Gagal Absen</string>
    <string name="invalid_code_rescan">Scan Ulang</string>
    <string name="invalid_code_exit">Kembali</string>
    <string name="loading_text">Loading...</string>
    <string name="success_text">Selamat anda telah dinyatakan hadir dalam event !! Selamat mengikuti event.</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_name">Nama</string>
    <string name="txt_register">Daftar</string>
    <string name="txt_login">Login</string>
    <string name="label_register_as">Daftar Sebagai</string>
    <string name="txt_or">Atau</string>
    <string name="txt_try_again">Coba Lagi</string>
    <string name="txt_general_error">Terjadi error, mohon coba beberapa saat lagi</string>
    <string name="txt_password_error">Password minimal 6 karakter</string>
    <string name="txt_email_taken_error">Email kamu sudah terdaftar, mohon coba lagi menggunakan email yang lain, atau login kembali</string>
    <string name="txt_data_incomplete_error">Mohon lengkapi semua data</string>
    <string name="txt_invalid_credential_error">Email atau password yang anda masukkan masih belum benar. Mohon pastikan data anda sudah sesuai dan coba lagi.</string>
    <string name="txt_checking_data">Memeriksa Data ....</string>
    <string name="txt_location_confirmation">Apakah anda yakin akan memilih lokasi %1$s ?</string>
    <string name="txt_date">%1$d %2$s %3$d</string>
    <string-array name="list_role">
        <item>Penyelenggara Acara</item>
        <item>Peserta Acara</item>
    </string-array>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_menu_my_event">Event Saya</string>
    <string name="txt_menu_profile">Profil</string>
    <string name="txt_menu_history">Riwayat</string>
    <string name="txt_menu_event">Event di sekitar</string>
    <string name="txt_menu_absent">Absent</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_role">Role</string>
    <string name="txt_yes">Ya</string>
    <string name="txt_no">Tidak</string>
    <string name="logout_message">Apakah anda yakin ingin logout dari user saat ini ?"</string>
    <string name="txt_error">Oopss.. terjadi error, mohon coba beberapa saat lagi</string>
    <string name="txt_loading">Mengambil data, mohon tunggu...</string>
    <string name="txt_empty_data">Ooopss anda masih belum menambahkan event, silahkan menambahkan event baru dengan klik tombol tambah di bawah</string>
    <string name="txt_add_event">Tambah Event</string>
    <string name="placeholder_title">Judul</string>
    <string name="placeholder_description">Deskripsi</string>
    <string name="placeholder_date">Tanggal</string>
    <string name="placeholder_location">Lokasi</string>
    <string name="txt_empty_all_event">Ooopss... ternyata masih belum ada event yang akan hadir di sekitar anda, silahkan coba lagi nanti</string>
    <string name="txt_general_empty_data">Ooopss... data masih belum ditemukan, mohon coba beberapa saat lagi ya</string>
    <string name="txt_register_event">Daftar Event</string>
    <string name="txt_detail_event">Detail Event</string>
    <string name="txt_location_detail">Detail Lokasi</string>
    <string name="txt_location_name">Nama Lokasi</string>
    <string name="txt_map">Map</string>
    <string name="txt_open_on_maps">Buka di Maps</string>
    <string name="txt_register_event_confirmation">Apakah anda yakin akan mendaftar pada event %1$s ?</string>
    <string name="txt_success_register_event">Anda berhasil mendaftar pada event %1$s, Jangan lupa datang dan melakukan absensi pada tanggal %2$s ya</string>
    <string name="txt_failed_register_event">Ooopss... Proses pendaftaran gagal, mohon coba beberapa saat lagi</string>
    <string name="txt_registered_event">Ooopss... Anda sudah terdaftar pada acara ini, silahkan cek menu my event untuk informasi selengkapnya</string>
    <string name="txt_qr_code">Qr Code</string>
    <string name="txt_download_qr_code">Download Qr Code</string>
    <string name="txt_participants">Peserta</string>
    <string name="txt_total_participants">Total : %1$d</string>
    <string name="txt_total_participants_and_attendance">Kehadiran : %1$d/%2$d</string>
    <string name="txt_qr_code_downloaded">Qr Code telah di download, anda dapet melihat melalui galeri atau file manager</string>
    <string name="txt_absent_duplicate">Ooopss... Anda sudah melakukan absensi pada event ini</string>
    <string name="txt_attend">Hadir</string>
    <string name="txt_did_not_attend">Tidak Hadir</string>
    <string name="txt_registered">Terdaftar</string>
</resources>
