<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100"
    android:fillViewport="true"
    tools:context=".view.participant.ui.event_join.EventJoinActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:id="@+id/txtTitle"
            app:layout_constraintLeft_toRightOf="@id/imgBack"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_add_event" />

        <TextView
            android:id="@+id/txtDetailEvent"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_detail_event"
            app:layout_constraintLeft_toLeftOf="@id/imgBack"
            app:layout_constraintTop_toBottomOf="@id/imgBack" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDetailEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="4dp"
            android:elevation="28dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/txtDetailEvent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_title"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/auth_text_border"
                    android:focusable="false"
                    android:hint="@string/placeholder_title"
                    android:paddingHorizontal="12dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/placeholder_description"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/auth_text_border"
                    android:focusable="false"
                    android:gravity="start"
                    android:hint="@string/placeholder_description"
                    android:padding="12dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/placeholder_date"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/auth_text_border"
                    android:focusable="false"
                    android:hint="@string/placeholder_date"
                    android:inputType="date"
                    android:paddingHorizontal="12dp"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtLocation"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_location_detail"
            app:layout_constraintLeft_toLeftOf="@id/cardViewDetailEvent"
            app:layout_constraintTop_toBottomOf="@id/cardViewDetailEvent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="4dp"
            android:elevation="28dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/txtLocation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_location_name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etLocationName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/auth_text_border"
                    android:focusable="false"
                    android:hint="@string/txt_location_name"
                    android:paddingHorizontal="12dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/txt_map"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/mapDetailEvent"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:clickable="true"
                    android:contentDescription="@string/txt_location_detail"
                    android:focusable="true" />

                <Button
                    android:id="@+id/btnOpenInMaps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_open_on_maps"
                    android:textAllCaps="false" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnRegisterEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="6dp"
            android:text="@string/txt_register_event"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/cardViewLocation" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>