<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100"
    android:fillViewport="true"
    tools:context=".view.admin.ui.my_event_detail.MyEventDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitle"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toRightOf="@id/imgBack"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_add_event" />

        <TextView
            android:id="@+id/txtDetailEvent"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_detail_event"
            app:layout_constraintLeft_toLeftOf="@id/imgBack"
            app:layout_constraintTop_toBottomOf="@id/imgBack" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDetailEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="4dp"
            android:elevation="28dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/txtDetailEvent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_title"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/auth_text_border"
                    android:focusable="false"
                    android:hint="@string/placeholder_title"
                    android:paddingHorizontal="12dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/placeholder_description"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/auth_text_border"
                    android:focusable="false"
                    android:gravity="start"
                    android:hint="@string/placeholder_description"
                    android:padding="12dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/placeholder_date"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/auth_text_border"
                    android:focusable="false"
                    android:hint="@string/placeholder_date"
                    android:inputType="date"
                    android:paddingHorizontal="12dp"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/txt_location_name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etLocationName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/auth_text_border"
                    android:focusable="false"
                    android:hint="@string/txt_location_name"
                    android:paddingHorizontal="12dp"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtLocation"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_qr_code"
            app:layout_constraintLeft_toLeftOf="@id/cardViewDetailEvent"
            app:layout_constraintTop_toBottomOf="@id/cardViewDetailEvent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewQrCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="4dp"
            android:elevation="28dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/txtLocation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgQrCode"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    tools:src="@drawable/ic_phone_loading" />

                <Button
                    android:id="@+id/btnDownloadQrCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/txt_download_qr_code"
                    android:textAllCaps="false" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtParticipant"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_participants"
            app:layout_constraintLeft_toLeftOf="@id/cardViewParticipants"
            app:layout_constraintTop_toBottomOf="@id/cardViewQrCode" />

        <TextView
            android:id="@+id/txtTotalParticipant"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/cardViewParticipants"
            app:layout_constraintRight_toRightOf="@id/cardViewParticipants"
            tools:text="@string/txt_participants" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:elevation="28dp"
            android:textAlignment="center"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtParticipant">

            <ListView
                android:id="@+id/listViewParticipants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <include
                android:id="@+id/layoutLoadingParticipant"
                layout="@layout/general_layout_loading"
                android:layout_width="match_parent"
                android:layout_height="400dp" />

            <include
                android:id="@+id/layoutEmptyParticipant"
                layout="@layout/general_layout_empty"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:visibility="gone" />

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>